--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ main {
 nav {
     background-color: beige;
     padding: 10px;
+    width: 100%;
 }
 
 nav ul {
@@ -53,7 +54,7 @@ nav a:hover {
 }
 
 #banner {
-    width: 100%;
+    width: 25%;
     height: auto;
     background-color: white;
 }
@@ -72,6 +73,7 @@ nav a:hover {
     font-size: 2em;
     padding: 20px;
     margin: 10px;
+    text-align: center;
 }
 
 table {
@@ -83,4 +85,17 @@ td,
 th {
     border: 1px solid black;
     padding: 5px;
+}
+
+#announcement {
+    background-color: rgb(153, 4, 4);
+    font-weight: bold;
+    color: aliceblue;
+    margin-top: auto;
+    padding: 6px;
+    font-size: 18px;
+}
+
+.locations li{
+    list-style-type: none;
 }
